src/MiniJava/Tests/DriverTests/unreachable_code.err
unreachable_code.mj:9:8-27: error: Unreachable code detected
            assert unreachable;
            ^^^^^^^^^^^^^^^^^^^
unreachable_code.mj:17:8-27: error: Unreachable code detected
            assert unreachable;
            ^^^^^^^^^^^^^^^^^^^

2 errors in total.
